--- a/params.yaml
+++ b/params.yaml
@@ -3,8 +3,9 @@ base :
     random_state : 42
     target_col :  TARGET 
 
-data _SOURCE :
-   s3_source : data_given/wineqaulity.csv
+data_source:
+  s3_source: data_given/winequality.csv
+
 
 load_data: 
     raw_dataset_csv : data/raw/winequality.csv
